# vllm-mlx-ui

./: .gitignore  AGENTS.md  CHANGELOG.md  ENGINE_AUDIT.md  LICENSE  PERFORMANCE_AUDIT.md  PROJECT_PLAN.md  README.md  README_UI.md  SESSION_CHANGES_2026-05-21.md  di-plan.md  install-remote.sh  install.sh  pyproject.toml  uninstall.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: qa-guardian.agent.md
.github/workflows/: qa-review.yml  update-tap.yml  upstream-release-watch.yml
.interface-design/: system.md
.streamlit/: config.toml
Formula/: vllm-mlx-ui.rb
docs/: SECURITY.md  index.md
docs/dashboard/: user-guide.md
docs/qa/: SYSTEM-MAP.md
examples/: audio_separation_example.py  benchmark_detokenizer.py  tts_example.py  tts_multilingual.py
scripts/: debug_proxy.py  dev-ui.sh  qa-sign-off.sh  release.sh  upstream_review.py  validate_dashboard.sh
tests/: conftest.py  test_anthropic_adapter.py  test_api_models.py  test_api_utils.py  test_apple_fm_engine.py  test_dashboard_metrics.py  test_ds4_m5_engine.py  test_engine_management_fixes.py  test_external_api_engine.py  test_native_tool_format.py  test_paged_cache.py  test_quality_benchmark.py  test_server.py  test_server_manager_preflight.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
vllm_mlx/: __init__.py  cli.py  server.py
website-6-2-26/: 00-kilroy-doc-sources.md  01-structural-outline.md  02-user-paths.md  developers.html  end-users.html  enterprise.html  index.html  investors.html  platform.html  styles.css
(+1111 files in other folders)
