[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vllm-mlx-ui"
version = "0.1.0"
description = "Beautiful macOS dashboard UI for vllm-mlx"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "plotly>=5.0.0",
    "pandas>=2.0.0",
    "requests>=2.28",
    "httpx>=0.27.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "huggingface-hub>=0.20.0",
]

[project.scripts]
vllm-mlx-ui = "vllm_mlx.dashboard.app:main"
